--- a/whoops.html
+++ b/whoops.html
@@ -7,10 +7,24 @@
     <title>CSP Violations Galore</title>
     <meta name="HandheldFriendly" content="True">
     <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono" rel="stylesheet" />
+    <style>
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+
+    body>* {
+        width: 100%;
+        height: 100%;
+    }
+
+    </style>
 </head>
 
 <body>
-    <div style="display: flex; flex-flow:column;justify-content: center">
+    <div style="display: flex; flex-flow:column;justify-content: center;align-items:center;background-color:black;color:white">
         <a target="_blank" href="http://google.com">Google.com</a>
         <a target="_blank" href="http://stackoverflow.com">StackOverflow.com</a>
     </div>
